--- a/index.html
+++ b/index.html
@@ -680,11 +680,11 @@
             "오토백 4.0":     { value: 280, keywords: ['Autobag4.0', '179_1.3F_AB_R4.0_OG_'] },
             "오토백 RTPB":    { value: 150, keywords: ['Autobag_RTPB1', '179_1.3F_AB_T1_OG_'] },
             "오토백 멀티":         { value: 250, keywords: ['AGV_Multi_Autobag4.0', '179_1.3F_AB_M_OG_'] },
-            //"CFC Manual S":       { value: 100, keywords: ['190_6.2F_MA_S_OG_'] },
-            //"CFC Manual M":       { value: 120, keywords: ['190_6.2F_MA_M_OG_'] },
-            //"CFC Autobag 2.5":    { value: 350, keywords: ['190_6.2F_AB_R2.5_OG_'] },
-            //"CFC Autobag 4.0":    { value: 280, keywords: ['190_6.2F_AB_R4.0_OG_'] },
-            //"CFC Autobag RTPB":   { value: 150, keywords: ['190_6.2G_AB_T1_OG_'] },
+            "CFC Manual S":       { value: 100, keywords: ['190_6.2F_MA_S_OG_'] },
+            "CFC Manual M":       { value: 120, keywords: ['190_6.2F_MA_M_OG_'] },
+            "CFC Autobag 2.5":    { value: 350, keywords: ['190_6.2F_AB_R2.5_OG_'] },
+            "CFC Autobag 4.0":    { value: 280, keywords: ['190_6.2F_AB_R4.0_OG_'] },
+            "CFC Autobag RTPB":   { value: 150, keywords: ['190_6.2G_AB_T1_OG_'] },
             "집품":               { value: 90, keywords: [] }
         };
         for(const key in TARGET_HTP_DEFAULTS) {
